[workspace]
resolver = "2"
members = [
    "./acronym",
    "./allergies",
    "./all-your-base",
    "./anagram",
    "./armstrong-numbers",
    "./assembly-line",
    "./binary-search",
    "./bob",
    "./collatz-conjecture",
    "./difference-of-squares",
    "./gigasecond",
    "./grains",
    "./health-statistics",
    "./hello-world",
    "./isogram",
    "./leap",
    "./lucians-luscious-lasagna",
    "./luhn",
    "./luhn-from",
    "./luhn-trait",
    "./pangram",
    "./raindrops",
    "./reverse-string",
    "./roman-numerals",
    "./scrabble-score",
    "./secret-handshake",
    "./semi-structured-logs",
    "./series",
    "./short-fibonacci",
    "./sieve",
    "./simple-linked-list",
    "./space-age",
    "./triangle",
]
